# krauss-ml-statarb

./: .gitattributes  .gitignore  README.md  claude.md  pyproject.toml
app/: requirements.txt  streamlit_app.py
app/.streamlit/: config.toml
app/data/: cost_bands.parquet  live_latest_positions.parquet  model_returns_metadata.json  pipeline_metadata.json  regime_k_sensitivity.parquet  regime_labels.parquet  regime_leg_decomp.parquet  spy_benchmark.parquet  summary_table.parquet
app/lib/: charts.py  data.py
app/pages/: 0_Background.py  1_Overview.py  1_Paper_Reproduction.py  2_Pipeline.py  (+15 more)
configs/: phase1_repro.yaml  phase2_extension.yaml
docs/: build_log.md  universe_spec.md  vix_regime_analysis.md
notebooks/: composite_gate_full_backtest.ipynb  composite_gate_test.ipynb  composite_rank_test.ipynb  composite_score_test.ipynb  composite_zscore_full_backtest.ipynb  composite_zscore_test.ipynb  cost_band_test.ipynb  p_only_full_backtest.ipynb  regime_analysis.ipynb  regime_asymmetric_k.ipynb  regime_cross_model.ipynb  regime_leg_decomp.ipynb  regime_scoring_subperiod.ipynb  reproduction_results.ipynb  reproduction_results_ds_h2o.ipynb  u_only_full_backtest.ipynb  u_only_test.ipynb
scripts/: build_data.py  build_features_labels.py  build_model_returns.py  build_permno_ticker_map.py  build_predictions_unified.py  build_returns_unified.py  extend_datastream_latest.py  fetch_vix.py  refresh_app_model_returns.py  refresh_live.py  run_phase1.py  run_phase2.py  run_phase2_datastream.py  validate_backtest.py
tests/: test_regime_analysis.py  test_vix_regimes.py
(+175 files in other folders)
